# mini-edge-tts

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
results/: README.txt
src/: App.tsx
src-tauri/: Cargo.toml  edge_tts_wrapper.py  edge_tts_wrapper.spec  tauri.conf.json
src-tauri/scripts/: tts_runner.py
src-tauri/src/: lib.rs
