[package]
name = "mini-edge-tts"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
msedge-tts = "0.3.0"
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
